3.9.0/_sources/gallery/lines_bars_and_markers/index.rst.txt


.. _sphx_glr_gallery_lines_bars_and_markers:

.. _lines_bars_and_markers_example:

Lines, bars and markers
=======================



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is an example showing how to control bar color and legend entries using the color and labe...">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_bar_colors_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_bar_colors.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Bar color demo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use the ~.Axes.bar_label helper function to create bar chart labels.">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_bar_label_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_bar_label_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Bar Label Demo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is an example of creating a stacked bar plot using ~matplotlib.pyplot.bar.">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_bar_stacked_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_bar_stacked.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Stacked bar chart</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows a how to create a grouped bar chart and how to annotate bars with labels.">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_barchart_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_barchart.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Grouped bar chart with labels</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example showcases a simple horizontal bar chart.">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_barh_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_barh.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Horizontal bar chart</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Make a &quot;broken&quot; horizontal bar plot, i.e., one with gaps">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_broken_barh_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_broken_barh.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Broken Barh</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The matplotlib._enums.CapStyle controls how Matplotlib draws the two endpoints (caps) of an unc...">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_capstyle_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_capstyle.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">CapStyle</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="You can pass categorical values (i.e. strings) directly as x- or y-values to many plotting func...">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_categorical_variables_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_categorical_variables.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Plotting categorical variables</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An example showing how to plot the coherence of two signals using ~.Axes.cohere.">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_cohere_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_cohere.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Plotting the coherence of two signals</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Plot the cross spectral density (CSD) of two signals using ~.Axes.csd.">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_csd_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_csd_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Cross spectral density (CSD)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example illustrates how to draw an error band around a parametrized curve.">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_curve_error_band_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_curve_error_band.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Curve with error band</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Illustration of selectively drawing lower and/or upper limit symbols on errorbars using the par...">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_errorbar_limits_simple_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_errorbar_limits_simple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Errorbar limit selection</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The parameter errorevery of .Axes.errorbar can be used to draw error bars only on a subset of d...">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_errorbar_subsample_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_errorbar_subsample.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Errorbar subsampling</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Plot two curves, then use .EventCollection\s to mark the locations of the x and y data points o...">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_eventcollection_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_eventcollection_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EventCollection Demo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An ~.axes.Axes.eventplot showing sequences of events with various line properties. The plot is ...">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_eventplot_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_eventplot_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Eventplot demo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="~.Axes.fill() draws a filled polygon based on lists of point coordinates x, y.">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_fill_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_fill.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Filled polygon</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The ~matplotlib.axes.Axes.fill_between function generates a shaded region between a min and max...">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_fill_between_alpha_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_fill_between_alpha.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fill Between and Alpha</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use ~.axes.Axes.fill_between to color the area between two lines.">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_fill_between_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_fill_between_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Filling the area between lines</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Using ~.Axes.fill_betweenx to color along the horizontal direction between two curves.">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_fill_betweenx_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_fill_betweenx_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fill Betweenx Demo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Hatching capabilities for plotting histograms.">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_filled_step_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_filled_step.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Hatch-filled histograms</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Matplotlib does not natively support gradients. However, we can emulate a gradient-filled recta...">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_gradient_bar_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_gradient_bar.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Bar chart with gradients</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Hat graph">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_hat_graph_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_hat_graph.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Hat graph</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Stacked bar charts can be used to visualize discrete distributions.">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_horizontal_barchart_distribution_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_horizontal_barchart_distribution.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Discrete distribution as horizontal bar chart</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The matplotlib._enums.JoinStyle controls how Matplotlib draws the corners where two different l...">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_joinstyle_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_joinstyle.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">JoinStyle</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The dashing of a line is controlled via a dash sequence. It can be modified using .Line2D.set_d...">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_line_demo_dash_control_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_line_demo_dash_control.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Customizing dashed line styles</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Ticks can be added along a line to mark one side as a barrier using ~matplotlib.patheffects.Tic...">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_lines_with_ticks_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_lines_with_ticks_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Lines with a ticked patheffect</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simple linestyles can be defined using the strings &quot;solid&quot;, &quot;dotted&quot;, &quot;dashed&quot; or &quot;dashdot&quot;. Mo...">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_linestyles_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_linestyles.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Linestyles</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Matplotlib supports multiple categories of markers which are selected using the marker paramete...">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_marker_reference_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_marker_reference.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Marker reference</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The markevery property of .Line2D allows drawing markers at a subset of data points.">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_markevery_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_markevery_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Markevery Demo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sometimes you need to plot data with missing values.">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_masked_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_masked_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Plotting masked and NaN values</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to make a multicolored line. In this example, the line is colored based ...">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_multicolored_line_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_multicolored_line.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multicolored lines</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use different properties of markers to plot multivariate datasets. He...">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_multivariate_marker_plot_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_multivariate_marker_plot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Mapping marker properties to multivariate data</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Plotting power spectral density (PSD) using ~.Axes.psd.">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_psd_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_psd_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Power spectral density (PSD)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Demo of scatter plot with varying marker colors and sizes.">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_scatter_demo2_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_scatter_demo2.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Scatter Demo2</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Show the marginal distributions of a scatter plot as histograms at the sides of the plot.">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_scatter_hist_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_scatter_hist.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Scatter plot with histograms</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Mask some data points and add a line demarking masked regions.">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_scatter_masked_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_scatter_masked.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Scatter Masked</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Example with different ways to specify markers.">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_scatter_star_poly_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_scatter_star_poly.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Marker examples</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="To create a scatter plot with a legend one may use a loop and create one ~.Axes.scatter plot pe...">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_scatter_with_legend_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_scatter_with_legend.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Scatter plots with a legend</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a simple plot.">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_simple_plot_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_simple_plot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Simple Plot</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Shade regions defined by a logical mask using fill_between">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_span_regions_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_span_regions.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Shade regions defined by a logical mask using fill_between</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The plots show different spectrum representations of a sine signal with additive noise. A (freq...">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_spectrum_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_spectrum_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Spectrum representations</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Stackplots and streamgraphs">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_stackplot_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_stackplot_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Stackplots and streamgraphs</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the use of ~.matplotlib.pyplot.stairs for stepwise constant functions...">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_stairs_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_stairs_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Stairs Demo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="~.pyplot.stem plots vertical lines from a baseline to the y-coordinate and places a marker at t...">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_stem_plot_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_stem_plot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Stem Plot</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the use of .pyplot.step for piece-wise constant curves. In particular...">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_step_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_step_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Step Demo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="How to create a simple timeline using Matplotlib release dates.">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_timeline_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_timeline.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Creating a timeline with lines, dates, and text</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example showcases the functions hlines and vlines.">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_vline_hline_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_vline_hline_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">hlines and vlines</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Example use of cross-correlation (`~.Axes.xcorr`) and auto-correlation (`~.Axes.acorr`) plots.">

.. only:: html

  .. image:: /gallery/lines_bars_and_markers/images/thumb/sphx_glr_xcorr_acorr_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_bars_and_markers_xcorr_acorr_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Cross- and auto-correlation</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/lines_bars_and_markers/bar_colors
   /gallery/lines_bars_and_markers/bar_label_demo
   /gallery/lines_bars_and_markers/bar_stacked
   /gallery/lines_bars_and_markers/barchart
   /gallery/lines_bars_and_markers/barh
   /gallery/lines_bars_and_markers/broken_barh
   /gallery/lines_bars_and_markers/capstyle
   /gallery/lines_bars_and_markers/categorical_variables
   /gallery/lines_bars_and_markers/cohere
   /gallery/lines_bars_and_markers/csd_demo
   /gallery/lines_bars_and_markers/curve_error_band
   /gallery/lines_bars_and_markers/errorbar_limits_simple
   /gallery/lines_bars_and_markers/errorbar_subsample
   /gallery/lines_bars_and_markers/eventcollection_demo
   /gallery/lines_bars_and_markers/eventplot_demo
   /gallery/lines_bars_and_markers/fill
   /gallery/lines_bars_and_markers/fill_between_alpha
   /gallery/lines_bars_and_markers/fill_between_demo
   /gallery/lines_bars_and_markers/fill_betweenx_demo
   /gallery/lines_bars_and_markers/filled_step
   /gallery/lines_bars_and_markers/gradient_bar
   /gallery/lines_bars_and_markers/hat_graph
   /gallery/lines_bars_and_markers/horizontal_barchart_distribution
   /gallery/lines_bars_and_markers/joinstyle
   /gallery/lines_bars_and_markers/line_demo_dash_control
   /gallery/lines_bars_and_markers/lines_with_ticks_demo
   /gallery/lines_bars_and_markers/linestyles
   /gallery/lines_bars_and_markers/marker_reference
   /gallery/lines_bars_and_markers/markevery_demo
   /gallery/lines_bars_and_markers/masked_demo
   /gallery/lines_bars_and_markers/multicolored_line
   /gallery/lines_bars_and_markers/multivariate_marker_plot
   /gallery/lines_bars_and_markers/psd_demo
   /gallery/lines_bars_and_markers/scatter_demo2
   /gallery/lines_bars_and_markers/scatter_hist
   /gallery/lines_bars_and_markers/scatter_masked
   /gallery/lines_bars_and_markers/scatter_star_poly
   /gallery/lines_bars_and_markers/scatter_with_legend
   /gallery/lines_bars_and_markers/simple_plot
   /gallery/lines_bars_and_markers/span_regions
   /gallery/lines_bars_and_markers/spectrum_demo
   /gallery/lines_bars_and_markers/stackplot_demo
   /gallery/lines_bars_and_markers/stairs_demo
   /gallery/lines_bars_and_markers/stem_plot
   /gallery/lines_bars_and_markers/step_demo
   /gallery/lines_bars_and_markers/timeline
   /gallery/lines_bars_and_markers/vline_hline_demo
   /gallery/lines_bars_and_markers/xcorr_acorr_demo

